[gd_scene load_steps=2 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"
horizontal_alignment = 1

[node name="MasterVolume" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
value = 80.0

[node name="MusicVolume" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
value = 80.0

[node name="SFXVolume" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/SFXVolume"]
layout_mode = 2
value = 80.0

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "BACK & SAVE"

[connection signal="value_changed" from="Panel/VBoxContainer/MasterVolume/HSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/MusicVolume/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolume/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
